--- a/src/App.css
+++ b/src/App.css
@@ -2,20 +2,9 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 10%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +13,32 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.content {
+  display: flex;
+  height: 80%;
+  align-items: center;
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navlink {
+  text-decoration: none;
+  color: rgb(247, 113, 41);
+  padding: 5px 10px;
+}
+
+.navlink.active {
+  color: rgb(144, 38, 22);
+  border-bottom: 1px solid rgb(144, 38, 22);
+  ;
+}
+
+.App-footer {
+  background-color: #282c34;
+  height: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
